Name:           Pinhole
Version:        0.1.0
Description:    A 2D physics puzzle game. Draw walls to direct the ball into a hole!
License:        GPL
License-file:   LICENSE
Author:         Omar Rizwan <omar.rizwan@gmail.com>
Maintainer:     Omar Rizwan <omar.rizwan@gmail.com>
Build-Type:     Custom
Cabal-Version:  >=1.6

Executable Pinhole
  Main-is:             Main.hs
  hs-source-dirs:      Pinhole
  Build-Depends:       base >= 3 && < 5,
                       directory == 1.2.*,
                       gloss == 1.8.*,
                       bytestring == 0.10.*,
                       aeson == 0.8.*,
                       aeson-pretty == 0.7.*,
                       cabal-macosx
  if os(windows)
    ghc-options:       -Wall -threaded -O2 -optl-mwindows
  else
    ghc-options:       -Wall -threaded -O2
